tests/typechecking/fail/whileconditiontype.spl
Int main()
{
	while (1)
	{
		Bool a = False;
	}
	return 1;
}
